<resources>
    <string name="app_name">Tip Calculator Orientation</string>

    <string name="label_bill">Bill</string>
    <string name="label_tip_percent">Tip (%)</string>
    <string name="label_tip">Tip ($)</string>
    <string name="label_total">Total</string>

    <string name="amount_bill_hint">Enter bill</string>
    <string name="amount_tip_percent_hint">Enter tip %</string>

    <string name="button_calculate">CALCULATE</string>
</resources>