<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:paddingBottom="30dp"
        android:paddingTop="50dp"
        tools:context="com.example.tipcalculatororientation.MainActivity">

        <TextView
            android:id="@+id/labelBill"
            style="@style/LabelStyle"
            android:layout_marginStart="20dp"
            android:minWidth="120dp"
            android:text="@string/label_bill" />

        <EditText
            android:id="@+id/amountBill"
            style="@style/InputStyle"
            android:layout_alignBottom="@+id/labelBill"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/labelBill"
            android:hint="@string/amount_bill_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/labelTipPercent"
            style="@style/LabelStyle"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/labelBill"
            android:layout_alignStart="@+id/labelBill"
            android:layout_alignEnd="@+id/labelBill"
            android:text="@string/label_tip_percent" />

        <EditText
            android:id="@+id/amountTipPercent"
            style="@style/InputStyle"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/amountBill"
            android:layout_alignBottom="@+id/labelTipPercent"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/labelTipPercent"
            android:hint="@string/amount_tip_percent_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />

        <!-- Red Line -->
        <View
            android:id="@+id/red_line"
            android:layout_width="match_parent"
            android:layout_height="5dip"
            android:layout_below="@+id/labelTipPercent"
            android:layout_marginTop="15dp"
            android:layout_alignStart="@+id/labelBill"
            android:layout_alignEnd="@id/amountBill"
            android:background="@color/red" />

        <TextView
            android:id="@+id/labelTip"
            style="@style/LabelStyle"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/red_line"
            android:layout_alignStart="@id/labelBill"
            android:layout_alignEnd="@id/labelBill"
            android:text="@string/label_tip" />

        <TextView
            android:id="@+id/amountTip"
            style="@style/OutputStyle"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/amountBill"
            android:layout_alignBottom="@+id/labelTip"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/labelTip" />

        <TextView
            android:id="@+id/labelTotal"
            style="@style/LabelStyle"
            android:layout_marginTop="15dp"
            android:layout_below="@id/labelTip"
            android:layout_alignStart="@id/labelBill"
            android:layout_alignEnd="@id/labelBill"
            android:text="@string/label_total" />

        <TextView
            android:id="@+id/amountTotal"
            style="@style/OutputStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/amountBill"
            android:layout_alignBottom="@id/labelTotal"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@id/labelTotal" />
    </RelativeLayout>
</layout>